--- a/Projekty Zaliczeniowe/Projekt 1/index.html
+++ b/Projekty Zaliczeniowe/Projekt 1/index.html
@@ -44,25 +44,39 @@
 
         <a href="#footer" class="tab" onclick="toggleSubmenu('')">Kontakt</a>
     </div>
+    <div class="filler"></div>
 
-    <div id="strona_glowna" class="content">
-        <iframe src="witam.html" frameborder="0"></iframe>
-    </div>
+    <div class="container">
+        <div class="main-content" style="width: 80%;">
+            <div id="strona_glowna" class="content">
+                <iframe src="witam.html" frameborder="0"></iframe>
+            </div>
 
-    <div id="zakladka1-content" class="content" style="display: none;">
-        <iframe src="prosty_kalkulator.html" frameborder="0"></iframe>
-    </div>
+            <div id="zakladka1-content" class="content" style="display: none;">
+                <iframe src="prosty_kalkulator.html" frameborder="0"></iframe>
+            </div>
 
-    <div id="zakladka2-content" class="content" style="display: none;">
-        <iframe src="fibonacci.html" frameborder="0"></iframe>
-    </div>
+            <div id="zakladka2-content" class="content" style="display: none;">
+                <iframe src="fibonacci.html" frameborder="0"></iframe>
+            </div>
 
-    <div id="zakladka3-content" class="content" style="display: none;">
-        <iframe src="pole_prostokata.html" frameborder="0"></iframe>
-    </div>
+            <div id="zakladka3-content" class="content" style="display: none;">
+                <iframe src="pole_prostokata.html" frameborder="0"></iframe>
+            </div>
 
-    <div id="kolor_strony" class="content" style="display: none;">
-        <iframe src="kolor_strony.html" frameborder="0"></iframe>
+            <div id="kolor_strony" class="content" style="display: none;">
+                <iframe src="kolor_strony.html" frameborder="0"></iframe>
+            </div>
+        </div>
+
+        <div class="main-content" style="width: 20%; margin-top: 30px; margin-right: 5px; margin-bottom: 30px;  color: #e0dfdf; background-color: #333; border-radius: 10px; height: 80%;">
+            <div style="padding: 20px;">
+                <h3>Cytat z mojego ulubionego filmu:</h3>
+                Jak to jest być skrybą, dobrze?<br> <br>
+                A, wie pan, moim zdaniem to nie ma tak, że dobrze, albo że niedobrze. Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi. Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam, i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie. Chodzi o to, że kiedy wyznaje się pewne wartości, nawet pozornie uniwersalne, bywa, że nie znajduje się zrozumienia, które by tak rzec, które pomaga się nam rozwijać. Ja miałem szczęście, by tak rzec, ponieważ je znalazłem, i dziękuję życiu! Dziękuję mu; życie to śpiew, życie to taniec, życie to miłość! Wielu ludzi pyta mnie o to samo: ale jak ty to robisz, skąd czerpiesz tę radość? A ja odpowiadam, że to proste! To umiłowanie życia. To właśnie ono sprawia, że dzisiaj na przykład buduję maszyny, a jutro – kto wie? Dlaczego by nie – oddam się pracy społecznej i będę, ot, choćby, sadzić...<br> doć— m-marchew...
+            </div>
+            
+        </div>
     </div>
 
     <script src="script.js"></script>
@@ -72,10 +86,10 @@
     <div class="footer-title">Kontakt</div>
     <div class="footer-icons">
         <a href="mailto:angnorelli@gmail.com"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=100004182914077"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/angelo_junior_norelli/#"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/AngeloNorelli"><i class="fab fa-github"></i></a>
-        <a href="https://outlook.live.com/"><i class="fas fa-envelope-open-text"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100004182914077" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/angelo_junior_norelli/#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/AngeloNorelli" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="mailto:angelo.norelli@student.uj.edu.pl"><i class="fas fa-envelope-open-text"></i></a>
     </div>
     <p>&copy; 2023 Angelo Norelli</p>
 </footer>
