--- a/Projekty Zaliczeniowe/Projekt 1/witam.html
+++ b/Projekty Zaliczeniowe/Projekt 1/witam.html
@@ -3,16 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Strona Powitalna</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+        }
+
+        .main-content {
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #f0f0f0;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Witaj na stronie!</h1>
-    </header>
-    
-    <main>
-        <p>Cześć, to jest przykładowa strona powitalna.</p>
-        <p>Mam nadzieję, że będziesz tu czuł się jak w domu!</p>
-    </main>
-
+    <div class="main-content">
+        <header>
+            <h1>Witaj na stronie!</h1>
+        </header>
+        
+        <main>
+            <p>Cześć, to jest moja pierwsza strona internetowa.</p>
+            <p>Ta strona powstała na poczet projektu zaliczeniowego z przedmiotu Techniki WWW.</p>
+            <p>Mam nadzieję, że będziesz tu czuł się jak w domu!</p>
+            <h1>O mnie</h1>
+            <p>Mam dwadzieścia jeden lat i jestem studentem III roku Informatyki Stosowanej na Wydziale Fizyki, Astronomii i Inforamtyki Stosowanej na Uniwersytecie Jagiellońskim.</p>
+            <p><a href="https://bip.uj.edu.pl/documents/1384597/148333355/099.21_UJ.WFAI_IST_1_S.pdf" target="_blank" style="text-decoration: none;">Tutaj</a> możesz podglądnąć na program studiów.</p>
+        </main>
+    </div>
 </body>
 </html>
