ostateczny wygląd strony

--- a/Projekty Zaliczeniowe/Projekt 1/kolor_strony.html
+++ b/Projekty Zaliczeniowe/Projekt 1/kolor_strony.html
@@ -5,7 +5,8 @@
   <title>Zmiana losowego koloru tła strony</title>
   <style>
     body {
-      transition: background-color 0.5s ease; /* Dodanie przejścia dla koloru tła */
+      transition: background-color 0.5s ease;
+      font-size: 20px;
     }
 
     .main-content {
@@ -40,4 +41,5 @@
     }
   </script>
 </body>
+<script src="skrypt_klikniecie_iframe.js"></script>
 </html>
