--- a/Projekty Zaliczeniowe/Projekt 1/witam.html
+++ b/Projekty Zaliczeniowe/Projekt 1/witam.html
@@ -6,6 +6,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
+            font-size: 20px;
         }
 
         .main-content {
@@ -23,7 +24,7 @@
         
         <main>
             <p>Cześć, to jest moja pierwsza strona internetowa.</p>
-            <p>Ta strona powstała na poczet projektu zaliczeniowego z przedmiotu Techniki WWW.</p>
+            <p>Ta strona powstała na poczet projektu zaliczeniowego z przedmiotu Techniki WWW. Dlatego też wykonałem specjalną zakładkę z niektórymi zadaniami w JavaScrip.</p>
             <p>Mam nadzieję, że będziesz tu czuł się jak w domu!</p>
             <h1>O mnie</h1>
             <p>Mam dwadzieścia jeden lat i jestem studentem III roku Informatyki Stosowanej na Wydziale Fizyki, Astronomii i Inforamtyki Stosowanej na Uniwersytecie Jagiellońskim.</p>
@@ -31,4 +32,5 @@
         </main>
     </div>
 </body>
+<script src="skrypt_klikniecie_iframe.js"></script>
 </html>
