--- a/Projekty Zaliczeniowe/Projekt 1/fibonacci.html
+++ b/Projekty Zaliczeniowe/Projekt 1/fibonacci.html
@@ -6,6 +6,7 @@
   <style>
     body {
         font-family: 'Arial', sans-serif;
+        font-size: 20px;
     }
 
     .main-content {
@@ -45,4 +46,5 @@
     }
   </script>
 </body>
+<script src="skrypt_klikniecie_iframe.js"></script>
 </html>
