--- a/Projekty Zaliczeniowe/Projekt 1/index.html
+++ b/Projekty Zaliczeniowe/Projekt 1/index.html
@@ -2,8 +2,9 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>Strona Główna projektu</title>
+    <title>Wizytówka</title>
     <link rel="stylesheet" href="styl_glownej.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -23,13 +24,8 @@
                     </div>
                 </div>
 
-                <div class="tab" onclick="toggleSubmenu('zakladka2')">
-                Zakładka2
-                    <div class="submenu" id="zakladka2" style="display: none;">
-                        <div class="subsite" onclick="showSubpage('')">Zakładka 2.1</div>
-                        <div class="subsite" onclick="showSubpage('')">Zakładka 2.2</div>
-                        <div class="subsite" onclick="showSubpage('')">Zakładka 2.3</div>
-                    </div>
+                <div class="tab" onclick="toggleSubmenu(showSubpage('projekty'))">
+                Moje Projekty
                 </div>
 
                 <div class="tab" onclick="toggleSubmenu(showSubpage('kolor_strony'))">
@@ -39,7 +35,8 @@
         </div>
 
         <div class="bar-title">
-            <h1>Angelo Norelli</h1>
+            <div style="display: flex; width: 33%;"></div>
+            Angelo Norelli
         </div>
 
         <a href="#footer" class="tab" onclick="toggleSubmenu('')">Kontakt</a>
@@ -47,7 +44,7 @@
     <div class="filler"></div>
 
     <div class="container">
-        <div class="main-content" style="width: 80%;">
+        <div class="main-content" style="width: 100%;">
             <div id="strona_glowna" class="content">
                 <iframe src="witam.html" frameborder="0"></iframe>
             </div>
@@ -64,18 +61,44 @@
                 <iframe src="pole_prostokata.html" frameborder="0"></iframe>
             </div>
 
+            <div id="projekty" class="content" style="display: none;">
+                <iframe src="projekty.html" frameborder="0"></iframe>
+            </div>
+
             <div id="kolor_strony" class="content" style="display: none;">
                 <iframe src="kolor_strony.html" frameborder="0"></iframe>
             </div>
         </div>
 
-        <div class="main-content" style="width: 20%; margin-top: 30px; margin-right: 5px; margin-bottom: 30px;  color: #e0dfdf; background-color: #333; border-radius: 10px; height: 80%;">
-            <div style="padding: 20px;">
-                <h3>Cytat z mojego ulubionego filmu:</h3>
-                Jak to jest być skrybą, dobrze?<br> <br>
-                A, wie pan, moim zdaniem to nie ma tak, że dobrze, albo że niedobrze. Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi. Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam, i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie. Chodzi o to, że kiedy wyznaje się pewne wartości, nawet pozornie uniwersalne, bywa, że nie znajduje się zrozumienia, które by tak rzec, które pomaga się nam rozwijać. Ja miałem szczęście, by tak rzec, ponieważ je znalazłem, i dziękuję życiu! Dziękuję mu; życie to śpiew, życie to taniec, życie to miłość! Wielu ludzi pyta mnie o to samo: ale jak ty to robisz, skąd czerpiesz tę radość? A ja odpowiadam, że to proste! To umiłowanie życia. To właśnie ono sprawia, że dzisiaj na przykład buduję maszyny, a jutro – kto wie? Dlaczego by nie – oddam się pracy społecznej i będę, ot, choćby, sadzić...<br> doć— m-marchew...
+        <div style="width: 20%; margin-top: 30px; margin-bottom: 30px; margin-right: 5px">
+            <div class="main-content" style="flex: 2; margin-bottom: 30px; color: #e0dfdf; background-color: #333; border-radius: 10px;">
+                <div style="padding: 20px; font-size: 20px;">
+                    <h3>Cytat z mojego ulubionego filmu:</h3>
+                    Jak to jest być skrybą, dobrze?<br> <br>
+                    A, wie pan, moim zdaniem to nie ma tak, że dobrze, albo że niedobrze. Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi. Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam, i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie. Chodzi o to, że kiedy wyznaje się pewne wartości, nawet pozornie uniwersalne, bywa, że nie znajduje się zrozumienia, które by tak rzec, które pomaga się nam rozwijać. Ja miałem szczęście, by tak rzec, ponieważ je znalazłem, i dziękuję życiu! Dziękuję mu; życie to śpiew, życie to taniec, życie to miłość! Wielu ludzi pyta mnie o to samo: ale jak ty to robisz, skąd czerpiesz tę radość? A ja odpowiadam, że to proste! To umiłowanie życia. To właśnie ono sprawia, że dzisiaj na przykład buduję maszyny, a jutro – kto wie? Dlaczego by nie – oddam się pracy społecznej i będę, ot, choćby, sadzić...<br> doć— m-marchew...
+                </div>
             </div>
-            
+            <div class="main-content" style="margin-bottom: 30px;  color: #e0dfdf; background-color: #333; border-radius: 10px;">
+                <div style="padding: 20px; font-size: 20px;">
+                    <h3>Najlepsze cytaty z mojej ulubionej gry:</h3>
+                    Geralt: Co jest w garnku?<br>
+                    Troll: Zupa z elfów i cebuli. Dobra. Chcesz jeść?<br>
+                    Geralt: Nie lubię cebuli.<br>
+                    Troll: Głupiś! Elf z cebulą dobry! Jak pomidor!<br>
+                    <br>
+                    Geralt: Mgła gęsta jak mleko…<br>
+                    Lambert: Obudził się w tobie poeta?<br>
+                    Geralt: Mhm. Chcesz usłyszeć fraszkę?<br>
+                    Lambert: Pewnie.<br>
+                    Geralt: Lambert, Lambert, ty chuju.<br>
+                    Lambert: Całkiem, całkiem.<br>
+                    <br>
+                    (Geralt otwiera sarkofag, w środku ktoś leży)<br>
+                    Wampir: Jeszcze pięć minut… Czy to już 1358?<br>
+                    Geralt: Nie…<br>
+                    Wampir: Ee, to spierdalać.<br>
+                </div>
+            </div>
         </div>
     </div>
 
