--- a/Projekty Zaliczeniowe/Projekt 1/fibonacci.html
+++ b/Projekty Zaliczeniowe/Projekt 1/fibonacci.html
@@ -19,7 +19,7 @@
 <body>
   <div class="main-content">
     <h1>Obliczanie n-tego elementu ciągu Fibonacciego</h1>
-    <label for="number">Podaj n: </label>
+    <label for="inputNumber">Podaj n: </label>
     <input type="number" id="inputNumber" placeholder="Wprowadź liczbę">
     <button onclick="obliczFibonacci()">Oblicz</button>
     <p>Wynik: <span id="wynik"></span></p>
