--- a/Projekty Zaliczeniowe/Projekt 1/projekty.html
+++ b/Projekty Zaliczeniowe/Projekt 1/projekty.html
@@ -49,10 +49,22 @@
     
         <div class="header">
             <h2>Jeszcze więcje?</h2>
-            <img src="html_favicon.png" alt="HTML" height="40px" style="margin-right: 5px;">
-            <img src="css_favicon.png" alt="CSS" height="40px" style="margin-right: 5px;">
-            <img src="js_favicon.png" alt="JavaScript" height="40px">
-            <img src="java_favicon.jpg" alt="Java" height="40px">
+            <table>
+                <tr>
+                    <td>
+                        <img src="html_favicon.png" alt="HTML" height="40px">
+                    </td>
+                    <td>
+                        <img src="css_favicon.png" alt="CSS" height="40px">
+                    </td>
+                    <td>
+                        <img src="js_favicon.png" alt="JavaScript" height="40px">
+                    </td>
+                    <td>
+                        <img src="java_favicon.jpg" alt="Java" height="40px">
+                    </td>
+                </tr>
+            </table>
         </div>
         <p>No dobra. Jeśli chcesz zobaczyć więcej moich wypocin w różnych językach programowania zapraszam na mojego <a href="https://github.com/AngeloNorelli" target="_blank" style="text-decoration: none;">githuba</a>.</p>
     </main>
