jeszcze jedna tabela

--- a/Projekty Zaliczeniowe/Projekt 1/projekty.html
+++ b/Projekty Zaliczeniowe/Projekt 1/projekty.html
@@ -32,8 +32,16 @@
         
         <div class="header" id="wizualizacja">
             <h2>Wizualizacja danych przy użyciu Pythona</h2>
-            <img src="colab_favicon.png" alt="Google Colab" height="40px" style="margin-right: 5px;">
-            <img src="python_favicon.png" alt="Python" height="40px">
+            <table>
+                <tr>
+                    <td>
+                    <img src="colab_favicon.png" alt="Google Colab" height="40px" style="margin-right: 5px;">
+                    </td>
+                    <td>
+                        <img src="python_favicon.png" alt="Python" height="40px">
+                    </td>
+                </tr>
+            </table>
         </div>
         <p>Celem projektu było zapoznanie się z językiem Python i środowiskiem Google Colab oraz, oczyście, zaliczenie przedmiotu Wizualizacja Danych.</p>
         <br>Projekt przedstawia cały proces uzyskiwania specyfikacji procesorów od różnych producentów z nawet 10 lat wstecz i porównywane są pod różnymi aspektami. Wykonane zostało również zestawienie kart graficznych użytkowników platformy Steam. Uzyskane zestawienia mogą być dla wielu interesujące.
